# xmlsplit

./: README.md  pyproject.toml  xmlsplit.py
